feat: add group age filter

--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 # Copy these to your environment or create a .env file
 
 # 2Chat API Configuration
-export TWOCHAT_API_KEY="your-2chat-api-key-here"
-export BOT_NUMBER="+353873326005"
+TWOCHAT_API_KEY="UAKab3401ad-1a9f-4ecb-822a-cb960f89903c"
+BOT_NUMBER="+353873326005"
 
 # Gemini AI Configuration  
-export GEMINI_API_KEY="your-gemini-api-key-here"
+GEMINI_API_KEY="AIzaSyC222jmU24bN3XlQ9hsgHBIDrAe6Lm7r68"
 
 # Optional: Customize bot behavior
 # export IRELAND_TIMEZONE="Europe/Dublin"
