feat: add message listener and weekly reporter

--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ BOT_NUMBER="+353873326005"
 # Gemini AI Configuration  
 GEMINI_API_KEY="AIzaSyC222jmU24bN3XlQ9hsgHBIDrAe6Lm7r68"
 
+NGROK_TOKEN="31HsL5bq03OsLg03yjQlzx4kYMu_ti48U2WqKcknQwFh6UrW"
+
 # Optional: Customize bot behavior
 # export IRELAND_TIMEZONE="Europe/Dublin"
 # export SATURDAY_REPORT_TIME="08:00"
